--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="test_6_26.cpp" />
     <ClCompile Include="test_6_27.cpp" />
     <ClCompile Include="test_6_28.cpp" />
+    <ClCompile Include="test_6_29.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commonly.h" />
