--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj.filters
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="test_6_28.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_6_29.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commonly.h">
