--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="test_6_27.cpp" />
     <ClCompile Include="test_6_28.cpp" />
     <ClCompile Include="test_6_29.cpp" />
+    <ClCompile Include="test_6_30.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commonly.h" />
