test_10_18求众数、只出现一次的数

--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj.filters
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="test_6_30.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_10_18.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commonly.h">
