--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj.filters
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="test_10_18.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_11_13.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commonly.h">
