--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <ClCompile Include="test_10_18.cpp" />
     <ClCompile Include="test_11_13.cpp" />
+    <ClCompile Include="test_11_19.cpp" />
     <ClCompile Include="test_6_26.cpp" />
     <ClCompile Include="test_6_27.cpp" />
     <ClCompile Include="test_6_28.cpp" />
