--- a/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
+++ b/LCodeandNCoder/LCodeandNCoder/LCodeandNCoder.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="test_11_13.cpp" />
     <ClCompile Include="test_11_19.cpp" />
     <ClCompile Include="test_11_22.cpp" />
+    <ClCompile Include="test_11_23.cpp" />
     <ClCompile Include="test_6_26.cpp" />
     <ClCompile Include="test_6_27.cpp" />
     <ClCompile Include="test_6_28.cpp" />
